# weaver

./: Cargo.toml  README.md
docs/: next.md  questions.md  thoughts.md
src/: compaction.rs  db.rs  entry.rs  error.rs  lib.rs  main.rs  record.rs  store.rs
tests/: store_integration.rs
