[package]
name = "weaver"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
thiserror = "2.0"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.23.0"
